sql/select_handler.cc
@@ -77,18 +77,17 @@ bool Pushdown_select::init()
 
 bool Pushdown_select::send_result_set_metadata()
 {
-  THD *thd= handler->thd;
-  Protocol *protocol= thd->protocol;
   DBUG_ENTER("Pushdown_select::send_result_set_metadata");
 
 #ifdef WITH_WSREP
+  THD *thd= handler->thd;
   if (WSREP(thd) && thd->wsrep_retry_query)
   {
     WSREP_DEBUG("skipping select metadata");
     DBUG_RETURN(false);
   }
   #endif /* WITH_WSREP */
-  if (protocol->send_result_set_metadata(&result_columns,
+  if (select->join->result->send_result_set_metadata(result_columns,
                                          Protocol::SEND_NUM_ROWS |
                                          Protocol::SEND_EOF))
     DBUG_RETURN(true);
@@ -100,23 +99,13 @@ bool Pushdown_select::send_result_set_metadata()
 bool Pushdown_select::send_data()
 {
   THD *thd= handler->thd;
-  Protocol *protocol= thd->protocol;
   DBUG_ENTER("Pushdown_select::send_data");
 
   if (thd->killed == ABORT_QUERY)
     DBUG_RETURN(false);
 
-  protocol->prepare_for_resend();
-  if (protocol->send_result_set_row(&result_columns))
-  {
-    protocol->remove_last_row();
+  if (select->join->result->send_data(result_columns))
     DBUG_RETURN(true);
-  }
-
-  thd->inc_sent_row_count(1);
-
-  if (thd->vio_ok())
-    DBUG_RETURN(protocol->write());
 
   DBUG_RETURN(false);
 }
@@ -124,16 +113,10 @@ bool Pushdown_select::send_data()
 
 bool Pushdown_select::send_eof()
 {
-  THD *thd= handler->thd;
   DBUG_ENTER("Pushdown_select::send_eof");
 
-  /*
-    Don't send EOF if we're in error condition (which implies we've already
-    sent or are sending an error)
-  */
-  if (thd->is_error())
+  if (select->join->result->send_eof())
     DBUG_RETURN(true);
-  ::my_eof(thd);
   DBUG_RETURN(false);
 }
 
